# mark123

./: .gitignore  CHANGELOG.md  CNAME  README.md  annotator.py  boundary_blacklist_dialog.py  build.py  claim_check.py  claim_ignore_dialog.py  cleaner.py  config_manager.py  doc_parser.py  dup_ignore_dialog.py  index.html  inspect_titles.py  installer.iss  latest.json  main.py  main_window.py  make_ico.py  mark_extractor.py  pyproject.toml  requirements.txt  single_instance.py  styles.py  test_claim_check.py  test_engine.py  test_parser.py  test_smoke.py  typo_wordbank.py  updater.py  version.py  wordbank_dialog.py  workers.py
.github/workflows/: release.yml
config/: __init__.py  config_manager.py  typo_wordbank.py
core/: __init__.py  annotator.py  claim_check.py  cleaner.py  mark_extractor.py  paragraph_edit.py  spec_check.py
dialogs/: base_wordbank_dialog.py
infra/: __init__.py  single_instance.py  updater.py
tabs/: claim_tab.py  clean_tab.py  mark_tab.py  typo_tab.py
tests/: __init__.py  test_claim_check.py  test_smoke.py  test_spec_check.py
ui/: __init__.py  activity_bar.py  content_area.py  main_window.py  nav_panel.py  styles.py  workers.py
ui/dialogs/: base_wordbank_dialog.py  boundary_blacklist_dialog.py  claim_ignore_dialog.py  dup_ignore_dialog.py  wordbank_dialog.py
ui/render/: __init__.py  formula.py  media.py
